@@ -1,13 +1,13 @@
-899790de1d4f80346ced5a9c75d373d5 *DESCRIPTION
+2ab00b50a57a2c9ba0d6323ebd0ed01c *DESCRIPTION
 635fc117e96154a37f30c2718d3655ff *NAMESPACE
-cacb5a062a98dc0dd8f7029c4adce723 *NEWS
+ec23d1acf518437c3deb1c9a4aa56985 *NEWS
 62b052ee5174a4f45c98c39ea0b29d6c *R/ComputeIIDKM.R
-b4f8df8a91143deebcd3f019e661eae5 *R/SeSpPPVNPV.R
+cc67c876e8e60095192741e5c8a1ca15 *R/SeSpPPVNPV.R
 db477e8eaded75ebd16d87e61c94234c *R/compare_ipcwROC.R
 b5f9cfc07365dac4b48faae00529be3d *R/compute_iid_ac_competing_risks.R
 aad1fd4dbc3654720538e0728c0be108 *R/compute_iid_rep_2.R
 fd3efcdbf6157b14ff84bbdb873ab845 *R/compute_iid_ss_competing_risks_2.R
-c7355164d87c93ff76fd1d259366444e *R/confint_ipcwROC.R
+870f9c801d98ae488150a5192e667840 *R/confint_ipcwROC.R
 b933d4b21c75a10c005070be59f4ae75 *R/plot.ipcwcompetingrisksROC.R
 c2b19a81cc32e9f74f73ee9c76eafb80 *R/plot.ipcwsurvivalROC.R
 38b5aaad174c754925315d54967a3eed *R/plotAUCcurve.R
@@ -16,17 +16,18 @@ a935cf7c85c997739cd3dd0f6f0c8228 *R/print.ipcwcompetingrisksROC.R
 b1cbb7c2ef2b3d3f971edad58ad73b79 *R/print.ipcwcompetingrisksSeSpPPVNPV.R
 1c65823b9019d865aa635842fc33ba45 *R/print.ipcwsurvivalROC.R
 4f40eb48c09dd63bbe80fb2ed1a2a2dc *R/print.ipcwsurvivalSeSpPPVNPV.R
-38001ef4314649896edee0d4d481e529 *R/timeROC_3.R
-afb0a38494211b8d15cb1dc7f4bdd46a *THANKS
+b1a8b9f3720c44b8b84d320762e1e0a2 *R/timeROC_3.R
+a63838b14d2d31adc96e84757c74b67d *THANKS
 6089becbc63f48e6c7043a94a0025396 *data/Melano.RData
 fc2d66fc3bdf32318bd2e470e87a6a23 *data/Paquid.RData
+56f9f57e1c4406eab9d83e20317bbee0 *inst/CITATION
 7ce97f737cf8869cca33660d779b3f72 *man/Melano.Rd
-f02b9a5643f4c88cf6148322ff6cf6a7 *man/Paquid.Rd
-a31d27a29465eae23654f0cc25b3ab29 *man/SeSpPPVNPV.Rd
-62f41eefa85ad0ceab6ee8a0c4fb1500 *man/compare.Rd
-053d77a63bc4b767570c143a80048db1 *man/confint.Rd
-595c1be8f01d4c25bb3e67547890077c *man/plot.Rd
-f1dc946c87968eab866945b6dc99fdb3 *man/plotAUCcurve.Rd
-3b9111c846984fc269f2a3fe189ddab5 *man/plotAUCcurveDiff.Rd
-0d88e190f09f4aaa42f15a0605a035eb *man/print.Rd
-bc085893af45c2a2c867f12ab4d31797 *man/timeROC.Rd
+658471596b40a148a237726bb4081809 *man/Paquid.Rd
+19a062054f0848881020a0f653e8be21 *man/SeSpPPVNPV.Rd
+f8625afed1360826f52936d688de22e7 *man/compare.Rd
+f4875aa3405b77abc892474ae32f153b *man/confint.Rd
+4fdd3a349368c2f89ec86d91afa5c9d1 *man/plot.Rd
+d9ff218cb8f663db86bca0562aa44dd4 *man/plotAUCcurve.Rd
+de75d5cb3da036720e54f0f1f8743205 *man/plotAUCcurveDiff.Rd
+ec814e48e47e6b00fc205e1d223f1bda *man/print.Rd
+0f3a085b6ed486265d78df8d916a32ad *man/timeROC.Rd
